--- a/frontend/cinema/package.json
+++ b/frontend/cinema/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "element-ui": "^2.14.1",
+    "swiper": "^6.4.1",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
